# WindowsML-Gesture

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  README.md
WindowsML-Gesture/: CMakeLists.txt  WindowsML-Gesture.cpp
assets/: VadNet.onnx  VadNet_9.onnx  VadNet_9.pb  test.onnx  test.pt  test2.onnx  test3.onnx  testnet.onnx  testnet.pb
include/: AudioRecorder.hpp  FeatureExtractor.hpp  GestureNet.hpp  GestureNetONNX.hpp  GestureNetTF.hpp  GestureNetTorch.hpp  RtAudio.h  utils.hpp
lib/: onnxruntime.lib  rtaudio.exp  rtaudio.lib  tensorflow.lib
scripts/: feature_test.asv  feature_test.m  fftwindow.m  log.txt  logfft.txt  onnx2pb.py  stft_feature_v4.m
src/: AudioRecorder.cpp  FeatureExtractor.cpp  GestureNet.cpp  GestureNetONNX.cpp  GestureNetTF.cpp  GestureNetTorch.cpp  RtAudio.cpp  utils.cpp
